# website

./: .env.example  .gitignore  README.md  pyproject.toml  start-dev.ps1
apps/api/: package-lock.json  package.json  prisma.config.ts  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts  prisma.config.ts
apps/api/src/database/: database.module.ts  prisma.service.mock.ts  prisma.service.ts  supabase.service.ts
apps/api/src/file-upload/: file-upload.controller.ts  file-upload.module.ts  file-upload.service.ts
apps/api/src/fragment/: fragment.controller.ts  fragment.module.ts  fragment.service.ts
apps/frontend/src/: App.tsx
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: index.css
backend/: pyproject.toml
backend/articles/: test_post_20251129_200317.txt
backend/database/: database.py  models.py
backend/src/backend/: app.py
data/static/: index.html  main.js  styles.css
frontend/: index.html  main.js
legacy/data/static/: index.html  main.js
legacy/python-fastapi/: README.md
src/server/: app.py  database.py  models.py  schemas.py  supabase_client.py
src/server/models/: article.py  edges.py  executions.py  fragments.py
src/server/prompts/: weekly-report.md  weekly-review.md
src/server/routers/: __init__.py  executions.py  ingest.py  upload.py
src/server/schemas/: __init__.py  edges.py  enums.py  executions.py  fragments.py
src/server/scripts/: generate_report.py
web/: package-lock.json  package.json
web/src/: index.css  main.tsx
web/src/pages/: Home.tsx
(+54 files in other folders)
