[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bick Hsu", email = "bickhsu@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
